# edge-ai-suites

./: .gitmodules  CONTRIBUTING.md  README.md
metro-ai-suite/live-video-analysis/live-metrics-service/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  telegraf.conf
metro-ai-suite/live-video-analysis/live-metrics-service/app/: __init__.py  config.py  main.py  relay.py  routes.py
metro-ai-suite/live-video-analysis/live-metrics-service/docs/user-guide/: api-reference.md  get-started.md  known-issues.md  overview.md  release-notes.md
metro-ai-suite/live-video-analysis/live-metrics-service/tests/: conftest.py  test_config.py  test_main.py  test_relay.py  test_routes.py
metro-ai-suite/live-video-analysis/live-video-captioning/app/: Dockerfile  main.py  pyproject.toml
metro-ai-suite/live-video-analysis/live-video-captioning/app/backend/: __init__.py  config.py  state.py
metro-ai-suite/live-video-analysis/live-video-captioning/app/tests/: conftest.py  test_config.py  test_discovery.py  test_http_client.py  test_main.py  test_mqtt_subscriber.py  test_requests.py  test_responses.py  test_routes_config.py  test_routes_health.py  test_routes_models.py  test_routes_pipelines.py  test_routes_runs.py  test_state.py
metro-ai-suite/live-video-analysis/live-video-captioning/app/ui/: index.html
metro-ai-suite/smart-route-planning-agent/src/: Dockerfile  compose.yaml  config.py  health_check.py  main.py  pyproject.toml  schema.py
metro-ai-suite/smart-route-planning-agent/src/agents/: planner_state.py  route_planner.py
metro-ai-suite/smart-route-planning-agent/src/controllers/: __init__.py  live_traffic.py  planned_events.py  route_interface.py  static_optimizer_factory.py  threshold.py  traffic_trends.py  weather_report.py
metro-ai-suite/smart-route-planning-agent/src/data/: config.json
metro-ai-suite/smart-route-planning-agent/src/data/routes/: berkeley-dublin-sanjose.gpx  berkeley-eastpaloalto.gpx  berkeley-oakland-i880.gpx  berkeley-sanbruno-sunnyvale.gpx  berkeley-sanbruno.gpx
metro-ai-suite/smart-route-planning-agent/src/services/: route_service.py
metro-ai-suite/smart-route-planning-agent/src/utils/: gpx_parser.py  helper.py  logging_config.py  map_creator.py
metro-ai-suite/smart-traffic-intersection-agent/src/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  third_party_programs.txt
metro-ai-suite/smart-traffic-intersection-agent/src/config/: deployment_instance.json  traffic_agent.json  weather.json
metro-ai-suite/smart-traffic-intersection-agent/src/services/: config.py  data_aggregator.py  vlm_service.py  weather_service.py
metro-ai-suite/smart-traffic-intersection-agent/src/ui/: app.py  config.py  data_loader.py  requirements.txt  ui_components.py
metro-ai-suite/video-processing-for-nvr/example/decode_pp_display/: CMakeLists.txt  build.sh  decode_pp_display.cpp
metro-ai-suite/video-processing-for-nvr/example/decode_pp_encode/: CMakeLists.txt  build.sh  decode_pp_encode.cpp
robotics-ai-suite/components/collaborative-slam/slam/openvslam/: CMakeLists.txt  UserConfig.h  config.cc  config.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  package.xml  tracking_module.cc  tracking_module.h  type.h
robotics-ai-suite/components/collaborative-slam/tracker/: CMakeLists.txt  package.xml
robotics-ai-suite/components/collaborative-slam/tracker/config/: euroc.yaml  geekplus.yaml  kitti.yaml  nav_tracker.yaml  tracker.yaml  tum_rgbd.yaml
robotics-ai-suite/components/collaborative-slam/tracker/launch/: collab_slam_nav.launch.py  euroc_mono.launch.py  euroc_stereo.launch.py  kitti_mono.launch.py  kitti_stereo.launch.py  tracker.launch.py  tracker_geek_fisheye.launch.py  tracker_geek_stereo.launch.py  tum_rgbd.launch.py
robotics-ai-suite/components/collaborative-slam/tracker/python_utils/: __init__.py  replace_string.py
robotics-ai-suite/components/collaborative-slam/tracker/ros/: TrackerNode.cpp  TrackerNode.h  main.cpp  rosx.h
robotics-ai-suite/components/collaborative-slam/tracker/tests/: test_image_transport.cpp  test_image_transport.py  test_imu_system.cpp  test_imu_system.py  test_lidar_system.cpp  test_lidar_system.py  test_tracker_inputs.cpp  test_utils.h
robotics-ai-suite/components/collaborative-slam/tracker/tools/: align_pose.py  combine_imudata.py  convert_camerainfo_to_rosbag.py  convert_files_to_bag.py  play_rosbag.py  play_rosbag_openloris.py
robotics-ai-suite/components/groundfloor/pointcloud_groundfloor_segmentation/test/: CMakeLists.txt  FuzzTest.cpp  HeightConfidenceTest.cpp  MonitorTest.cpp  REUSE.toml  main.cpp  test_lidar.sh  test_realsense.sh
robotics-ai-suite/components/its-planner/its_planner/: CMakeLists.txt  global_planner_plugin.xml  nav2_params_dubins_humble.yaml  nav2_params_dubins_jazzy.yaml  nav2_params_humble.yaml  nav2_params_jazzy.yaml  navigate_w_recovery_humble.xml  navigate_w_recovery_jazzy.xml
robotics-ai-suite/components/its-planner/its_planner/launch/: its_ackermann_launch.py  its_differential_launch.py
robotics-ai-suite/components/its-planner/its_planner/src/: its_planner.cpp
robotics-ai-suite/components/its-planner/its_planner/test/: test_dynamic_parameters.cpp  test_prm.cpp
robotics-ai-suite/components/its-planner/send_localization/: CMakeLists.txt
robotics-ai-suite/components/its-planner/send_localization/include/: send_localization.hpp
robotics-ai-suite/components/its-planner/send_localization/src/: send_localization.cpp
robotics-ai-suite/components/its-planner/send_localization/test/: CMakeLists.txt  test_send_localization.cpp
robotics-ai-suite/components/simulations/PicknPlace/gazebo_plugins/: CMakeLists.txt  package.xml
robotics-ai-suite/components/simulations/PicknPlace/picknplace/: CMakeLists.txt  README.md  package.xml  setup.py
robotics-ai-suite/components/simulations/PicknPlace/robot_config/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
robotics-ai-suite/components/wandering/wandering/: CMakeLists.txt  package.xml
(+2595 files in other folders)
