# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "live-metrics-service"
version = "1.0.0"
description = "A reusable metrics collection and relay microservice for system monitoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.128.0",
    "uvicorn==0.40.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
