# Copyright (C) 2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "smart-route-planning-agent"
version = "0.1.0"
description = "Smart Route Planner - Agentic AI based Commuter Support System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==26.1.0",
    "branca==0.6.0",
    "folium==0.14.0",
    "gpxpy",
    "gradio==5.49.1",
    "gradio_toggle>=0.1.5",
    "isort",
    "langgraph==1.0.7",
    "mypy",
    "numpy>1.24.3",
    "pandas",
    "pillow>=10.4.0",
    "pydantic",
    "pytest",
    "python-dateutil",
    "requests",
    "rich",
    "typing-extensions",
]
