[project]
name = "live-video-captioning"
version = "0.1.0"
description = "Live Video Captioning with FastAPI backend and WebRTC frontend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.128.0",
    "uvicorn==0.40.0",
    "paho-mqtt==2.1.0",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
